--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@vercel/postgres": "^0.4.0",
     "autoprefixer": "10.4.14",
+    "drizzle-orm": "^0.27.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
